package edu.fiuba.algo3.modelo.Exclusividad;

public interface Exclusividad {
    Exclusividad proximo();

    Integer multiplicar(int puntos);
}
