package edu.fiuba.algo3.modelo.multiplicadores;

public interface Multiplicador {
    Integer multiplicar(int puntos);

    Multiplicador proximo();
}
